[package]
name = "rust_utils"
version = "0.9.0"
authors = ["Sebastian Kaźmierczak <moques93@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
config = { version = "0.13.3", default-features = false, optional = true }
serde = { version = "1.0.162", default-features = false, optional = true }
serde_json = { version = "1.0.96", default-features = false, optional = true }
log = { version = "0.4.17", default-features = false, optional = true }
envmnt = { version = "0.10.4", default-features = false, optional = true }
itertools = { version = "0.10.5", default-features = false, optional = true }
slugify = { version = "0.1.0", default-features = false, optional = true }
num = { version = "0.4.0", default-features = false, optional = true }

[features]
default = []
macros = [
    "macros-enum_struct",
    "macros-str_function",
    "macros-transparent_struct",
    "macros-diff",
]
macros-enum_struct = []
macros-str_function = []
macros-transparent_struct = []
macros-diff = []
clap_guards = ["dep:num"]
config = ["dep:config", "enable-serde"]
database = ["dep:slugify"]
diff = []
dotenv = ["dep:envmnt"]
ignore = []
log = ["dep:log"]
map = []
serde_utils = ["enable-serde_json"]
string = []
unwrap_ref = []
vec_utils = []

enable-serde = ["serde/derive"]
enable-serde_json = ["enable-serde", "serde_json/std"]

