[package]
name = "rust_utils"
version = "0.12.1"
authors = ["<moques93@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
askama = { version = "0.12.1", default-features = false, optional = true }
config = { version = "0.14.0", default-features = false, optional = true }
serde = { version = "1.0.203", default-features = false, optional = true }
serde_json = { version = "1.0.120", default-features = false, optional = true }
log = { version = "0.4.22", default-features = false, optional = true }
envmnt = { version = "0.10.4", default-features = false, optional = true }
itertools = { version = "0.13.0", default-features = false, optional = true }
slugify = { version = "0.1.0", default-features = false, optional = true }
num = { version = "0.4.3", default-features = false, optional = true }
tokio = { version = "1.38.0", default-features = false, optional = true }

[features]
full = [
    "macros",
    "clap_guards",
    "config",
    "database",
    "diff",
    "dotenv",
    "ignore",
    "log",
    "map",
    "serde_utils",
    "string",
    "unwrap_ref",
    "vec_utils",
    "file",
    "file-async",
    "askama_filters",
]
default = []
macros = [
    "macros-enum_struct",
    "macros-str_function",
    "macros-transparent_struct",
    "macros-diff",
]
macros-enum_struct = []
macros-str_function = []
macros-transparent_struct = []
macros-diff = []
clap_guards = ["dep:num"]
config = ["dep:config", "enable-serde"]
database = ["dep:slugify"]
diff = []
dotenv = ["dep:envmnt"]
ignore = []
log = ["dep:log"]
map = []
serde_utils = ["enable-serde_json"]
string = []
unwrap_ref = []
vec_utils = []
file = ["enable-serde_json"]
file-async = ["enable-toko-fs"]
askama_filters = ["enable-askama"]

enable-serde = ["serde/derive"]
enable-toko-fs = ["tokio/fs"]
enable-serde_json = ["enable-serde", "serde_json/std"]
enable-askama = ["dep:askama"]

